--- a/angular.json
+++ b/angular.json
@@ -224,7 +224,8 @@
   "schematics": {
     "@nrwl/angular:application": {
       "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
+      "e2eTestRunner": "cypress",
+      "styleext": "scss"
     },
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
