--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,14 @@
             "polyfills": "apps/sw02/src/polyfills.ts",
             "tsConfig": "apps/sw02/tsconfig.app.json",
             "aot": true,
-            "assets": ["apps/sw02/src/favicon.ico", "apps/sw02/src/assets"],
-            "styles": ["apps/sw02/src/styles.scss"],
+            "assets": [
+              "apps/sw02/src/favicon.ico",
+              "apps/sw02/src/assets"
+            ],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "apps/sw02/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -80,7 +86,10 @@
               "apps/sw02/tsconfig.app.json",
               "apps/sw02/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/sw02/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/sw02/**"
+            ]
           }
         },
         "test": {
@@ -115,8 +124,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/sw02-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/sw02-e2e/**"]
+            "tsConfig": [
+              "apps/sw02-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/sw02-e2e/**"
+            ]
           }
         }
       }
@@ -134,7 +148,10 @@
               "libs/core-data/tsconfig.lib.json",
               "libs/core-data/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/core-data/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/core-data/**"
+            ]
           }
         },
         "test": {
@@ -166,7 +183,10 @@
               "libs/material/tsconfig.lib.json",
               "libs/material/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/material/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/material/**"
+            ]
           }
         },
         "test": {
@@ -198,7 +218,10 @@
               "libs/ui-toolbar/tsconfig.lib.json",
               "libs/ui-toolbar/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/ui-toolbar/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui-toolbar/**"
+            ]
           }
         },
         "test": {
